v9/en/15_Functions_and_Operators/02_Loadable_Function_Reference.md
## 14.2 Loadable Function Reference

The following table lists each function that is loadable at
runtime and provides a short description of each one. For a table
listing built-in functions and operators, see
[Section 14.1, “Built-In Function and Operator Reference”](built-in-function-reference.html "14.1 Built-In Function and Operator Reference")

For general information about loadable functions, see
[Section 7.7, “MySQL Server Loadable Functions”](server-loadable-functions.html "7.7 MySQL Server Loadable Functions").

**Table 14.2 Loadable Functions**

<table frame="box" rules="all" summary="A reference that lists all loadable functions."><col style="width: 25%"/><col style="width: 62%"/><col style="width: 12%"/><thead><tr><th>Name</th>
<th>Description</th>
<th>Deprecated</th>
</tr></thead><tbody><tr><th scope="row"><a class="link" href="enterprise-encryption-functions.html#function_asymmetric-decrypt"><code class="literal">asymmetric_decrypt()</code></a></th>
<td>
      Decrypt ciphertext using private or public key
    </td>
<td></td>
</tr><tr><th scope="row"><code class="literal">asymmetric_derive()</code></th>
<td>
      Derive symmetric key from asymmetric keys
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="enterprise-encryption-functions.html#function_asymmetric-encrypt"><code class="literal">asymmetric_encrypt()</code></a></th>
<td>
      Encrypt cleartext using private or public key
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="enterprise-encryption-functions.html#function_asymmetric-sign"><code class="literal">asymmetric_sign()</code></a></th>
<td>
      Generate signature from digest
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="enterprise-encryption-functions.html#function_asymmetric-verify"><code class="literal">asymmetric_verify()</code></a></th>
<td>
      Verify that signature matches digest
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="replication-functions-async-failover.html#function_asynchronous-connection-failover-add-managed"><code class="literal">asynchronous_connection_failover_add_managed()</code></a></th>
<td>
      Add a replication source server in a managed group to the source
      list
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="replication-functions-async-failover.html#function_asynchronous-connection-failover-add-source"><code class="literal">asynchronous_connection_failover_add_source()</code></a></th>
<td>
      Add a replication source server to the source list
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="replication-functions-async-failover.html#function_asynchronous-connection-failover-delete-managed"><code class="literal">asynchronous_connection_failover_delete_managed()</code></a></th>
<td>
      Remove managed group of replication source servers from the source
      list
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="replication-functions-async-failover.html#function_asynchronous-connection-failover-delete-source"><code class="literal">asynchronous_connection_failover_delete_source()</code></a></th>
<td>
      Remove a replication source server from the source list
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-api-message-emit.html#function_audit-api-message-emit-udf"><code class="literal">audit_api_message_emit_udf()</code></a></th>
<td>
      Add message event to audit log
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-encryption-password-get"><code class="literal">audit_log_encryption_password_get()</code></a></th>
<td>
      Fetch audit log encryption password
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-encryption-password-set"><code class="literal">audit_log_encryption_password_set()</code></a></th>
<td>
      Set audit log encryption password
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-filter-flush"><code class="literal">audit_log_filter_flush()</code></a></th>
<td>
      Flush audit log filter tables
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-filter-remove-filter"><code class="literal">audit_log_filter_remove_filter()</code></a></th>
<td>
      Remove audit log filter
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-filter-remove-user"><code class="literal">audit_log_filter_remove_user()</code></a></th>
<td>
      Unassign audit log filter from user
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-filter-set-filter"><code class="literal">audit_log_filter_set_filter()</code></a></th>
<td>
      Define audit log filter
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-filter-set-user"><code class="literal">audit_log_filter_set_user()</code></a></th>
<td>
      Assign audit log filter to user
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-read"><code class="literal">audit_log_read()</code></a></th>
<td>
      Return audit log records
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-read-bookmark"><code class="literal">audit_log_read_bookmark()</code></a></th>
<td>
      Bookmark for most recent audit log event
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="audit-log-reference.html#function_audit-log-rotate"><code class="literal">audit_log_rotate()</code></a></th>
<td>
      Rotate audit log file
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="enterprise-encryption-functions.html#function_create-asymmetric-priv-key"><code class="literal">create_asymmetric_priv_key()</code></a></th>
<td>
      Create private key
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="enterprise-encryption-functions.html#function_create-asymmetric-pub-key"><code class="literal">create_asymmetric_pub_key()</code></a></th>
<td>
      Create public key
    </td>
<td></td>
</tr><tr><th scope="row"><code class="literal">create_dh_parameters()</code></th>
<td>
      Generate shared DH secret
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="enterprise-encryption-functions.html#function_create-digest"><code class="literal">create_digest()</code></a></th>
<td>
      Generate digest from string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="firewall-component.html#function_firewall-group-delist"><code class="literal">firewall_group_delist()</code></a></th>
<td>
      Remove account from firewall group profile
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="firewall-component.html#function_firewall-group-enlist"><code class="literal">firewall_group_enlist()</code></a></th>
<td>
      Add account to firewall group profile
    </td>
<td></td>
</tr><tr><th scope="row"><code class="literal">firewall_group_remove()</code></th>
<td>
      Remove specified firewall group
    </td>
<td></td>
</tr><tr><th scope="row"><code class="literal">firewall_group_rename()</code></th>
<td>
      Rename a firewall group
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="rewriter-query-rewrite-plugin-reference.html#function_flush-rewrite-rules"><code class="literal">flush_rewrite_rules()</code></a></th>
<td>
      Load rewrite_rules table into Rewriter cache
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-blacklist-plugin"><code class="literal">gen_blacklist()</code></a></th>
<td>
      Perform dictionary term replacement
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-blocklist"><code class="literal">gen_blocklist()</code></a></th>
<td>
      Perform dictionary term replacement
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-blocklist-plugin"><code class="literal">gen_blocklist()</code></a></th>
<td>
      Perform dictionary term replacement
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-dictionary"><code class="literal">gen_dictionary()</code></a></th>
<td>
      Return random term from dictionary
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-dictionary-drop-plugin"><code class="literal">gen_dictionary_drop()</code></a></th>
<td>
      Remove dictionary from registry
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-dictionary-load-plugin"><code class="literal">gen_dictionary_load()</code></a></th>
<td>
      Load dictionary into registry
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-dictionary-plugin"><code class="literal">gen_dictionary()</code></a></th>
<td>
      Return random term from dictionary
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-range"><code class="literal">gen_range()</code></a></th>
<td>
      Generate random number within range
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-range-plugin"><code class="literal">gen_range()</code></a></th>
<td>
      Generate random number within range
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-rnd-canada-sin"><code class="literal">gen_rnd_canada_sin()</code></a></th>
<td>
      Generate random Canada Social Insurance Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-rnd-email"><code class="literal">gen_rnd_email()</code></a></th>
<td>
      Generate random email address
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-rnd-email-plugin"><code class="literal">gen_rnd_email()</code></a></th>
<td>
      Generate random email address
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-rnd-iban"><code class="literal">gen_rnd_iban()</code></a></th>
<td>
      Generate random International Bank Account Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-rnd-pan"><code class="literal">gen_rnd_pan()</code></a></th>
<td>
      Generate random payment card Primary Account Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-rnd-pan-plugin"><code class="literal">gen_rnd_pan()</code></a></th>
<td>
      Generate random payment card Primary Account Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-rnd-ssn"><code class="literal">gen_rnd_ssn()</code></a></th>
<td>
      Generate random US Social Security Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-rnd-ssn-plugin"><code class="literal">gen_rnd_ssn()</code></a></th>
<td>
      Generate random US Social Security Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-rnd-uk-nin"><code class="literal">gen_rnd_uk_nin()</code></a></th>
<td>
      Generate random United Kingdom National Insurance Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-rnd-us-phone"><code class="literal">gen_rnd_us_phone()</code></a></th>
<td>
      Generate random US phone number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_gen-rnd-us-phone-plugin"><code class="literal">gen_rnd_us_phone()</code></a></th>
<td>
      Generate random US phone number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_gen-rnd-uuid"><code class="literal">gen_rnd_uuid()</code></a></th>
<td>
      Generate random Universally Unique Identifier
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-member-actions.html#function_group-replication-disable-member-action"><code class="literal">group_replication_disable_member_action()</code></a></th>
<td>
      Enable a member action so that the member does not take it in the
      specified situation
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-member-actions.html#function_group-replication-enable-member-action"><code class="literal">group_replication_enable_member_action()</code></a></th>
<td>
      Enable a member action for the member to take in the specified
      situation
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-communication-protocol.html#function_group-replication-get-communication-protocol"><code class="literal">group_replication_get_communication_protocol()</code></a></th>
<td>
      Return Group Replication protocol version
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-maximum-consensus.html#function_group-replication-get-write-concurrency"><code class="literal">group_replication_get_write_concurrency()</code></a></th>
<td>
      Return maximum number of consensus instances executable in
      parallel
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-member-actions.html#function_group-replication-reset-member-actions"><code class="literal">group_replication_reset_member_actions()</code></a></th>
<td>
      Reset the member actions configuration to the default settings
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-new-primary.html#function_group-replication-set-as-primary"><code class="literal">group_replication_set_as_primary()</code></a></th>
<td>
      Assign group member as new primary
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-communication-protocol.html#function_group-replication-set-communication-protocol"><code class="literal">group_replication_set_communication_protocol()</code></a></th>
<td>
      Set Group Replication protocol version
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-maximum-consensus.html#function_group-replication-set-write-concurrency"><code class="literal">group_replication_set_write_concurrency()</code></a></th>
<td>
      Set maximum number of consensus instances executable in parallel
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-mode.html#function_group-replication-switch-to-multi-primary-mode"><code class="literal">group_replication_switch_to_multi_primary_mode()</code></a></th>
<td>
      Change group from single-primary to multi-primary mode
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="group-replication-functions-for-mode.html#function_group-replication-switch-to-single-primary-mode"><code class="literal">group_replication_switch_to_single_primary_mode()</code></a></th>
<td>
      Change group from multi-primary to single-primary mode
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-plugin-specific.html#function_keyring-aws-rotate-cmk"><code class="literal">keyring_aws_rotate_cmk()</code></a></th>
<td>
      Rotate AWS customer master key
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-plugin-specific.html#function_keyring-aws-rotate-keys"><code class="literal">keyring_aws_rotate_keys()</code></a></th>
<td>
      Rotate keys in keyring_aws storage file
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-plugin-specific.html#function_keyring-hashicorp-update-config"><code class="literal">keyring_hashicorp_update_config()</code></a></th>
<td>
      Cause runtime keyring_hashicorp reconfiguration
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-general-purpose.html#function_keyring-key-fetch"><code class="literal">keyring_key_fetch()</code></a></th>
<td>
      Fetch keyring key value
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-general-purpose.html#function_keyring-key-generate"><code class="literal">keyring_key_generate()</code></a></th>
<td>
      Generate random keyring key
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-general-purpose.html#function_keyring-key-length-fetch"><code class="literal">keyring_key_length_fetch()</code></a></th>
<td>
      Return keyring key length
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-general-purpose.html#function_keyring-key-remove"><code class="literal">keyring_key_remove()</code></a></th>
<td>
      Remove keyring key
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-general-purpose.html#function_keyring-key-store"><code class="literal">keyring_key_store()</code></a></th>
<td>
      Store key in keyring
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="keyring-functions-general-purpose.html#function_keyring-key-type-fetch"><code class="literal">keyring_key_type_fetch()</code></a></th>
<td>
      Return keyring key type
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="rewriter-query-rewrite-plugin-reference.html#function_load-rewrite-rules"><code class="literal">load_rewrite_rules()</code></a></th>
<td>
      Rewriter plugin helper routine
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-canada-sin"><code class="literal">mask_canada_sin()</code></a></th>
<td>
      Mask Canada Social Insurance Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-iban"><code class="literal">mask_iban()</code></a></th>
<td>
      Mask International Bank Account Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-inner"><code class="literal">mask_inner()</code></a></th>
<td>
      Mask interior part of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_mask-inner-plugin"><code class="literal">mask_inner()</code></a></th>
<td>
      Mask interior part of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-outer"><code class="literal">mask_outer()</code></a></th>
<td>
      Mask left and right parts of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_mask-outer-plugin"><code class="literal">mask_outer()</code></a></th>
<td>
      Mask left and right parts of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-pan"><code class="literal">mask_pan()</code></a></th>
<td>
      Mask payment card Primary Account Number part of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_mask-pan-plugin"><code class="literal">mask_pan()</code></a></th>
<td>
      Mask payment card Primary Account Number part of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-pan-relaxed"><code class="literal">mask_pan_relaxed()</code></a></th>
<td>
      Mask payment card Primary Account Number part of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_mask-pan-relaxed-plugin"><code class="literal">mask_pan_relaxed()</code></a></th>
<td>
      Mask payment card Primary Account Number part of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-ssn"><code class="literal">mask_ssn()</code></a></th>
<td>
      Mask US Social Security Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-plugin-functions.html#function_mask-ssn-plugin"><code class="literal">mask_ssn()</code></a></th>
<td>
      Mask US Social Security Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-uk-nin"><code class="literal">mask_uk_nin()</code></a></th>
<td>
      Mask United Kingdom National Insurance Number
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_mask-uuid"><code class="literal">mask_uuid()</code></a></th>
<td>
      Mask Universally Unique Identifier part of string
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_masking-dictionaries-flush"><code class="literal">masking_dictionaries_flush()</code></a></th>
<td>
      Cause masking_dictionaries cache to be reloaded from table
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_masking-dictionary-remove"><code class="literal">masking_dictionary_remove()</code></a></th>
<td>
      Remove dictionary from the database table
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_masking-dictionary-term-add"><code class="literal">masking_dictionary_term_add()</code></a></th>
<td>
      Add new term to the dictionary
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="data-masking-component-functions.html#function_masking-dictionary-term-remove"><code class="literal">masking_dictionary_term_remove()</code></a></th>
<td>
      Remove existing term from the dictionary
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="srjs-session-info.html#function_mle-session-reset"><code class="literal">mle_session_reset()</code></a></th>
<td>
      Clean up all MLE-related state information
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="srjs-session-info.html#function_mle-session-state"><code class="literal">mle_session_state()</code></a></th>
<td>
      Display state and other information about MLE stored program that
      was most recently executed
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="srjs-session-info.html#function_mle-set-session-state"><code class="literal">mle_set_session_state()</code></a></th>
<td>
      Determine rules for converting integers from MySQL types to
      JavaScript types
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="firewall-component.html#function_mysql-firewall-flush-status"><code class="literal">mysql_firewall_flush_status()</code></a></th>
<td>
      Reset firewall status variables
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="query-attributes.html#function_mysql-query-attribute-string"><code class="literal">mysql_query_attribute_string()</code></a></th>
<td>
      Fetch query attribute value
    </td>
<td></td>
</tr><tr><th scope="row"><code class="literal">normalize_statement()</code></th>
<td>
      Normalize SQL statement to digest form
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="option-tracker-component-functions.html#function_option-tracker-option-register"><code class="literal">option_tracker_option_register()</code></a></th>
<td>
      Register an option with the Option Tracker
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="option-tracker-component-functions.html#function_option-tracker-option-unregister"><code class="literal">option_tracker_option_unregister()</code></a></th>
<td>
      Deregister an option from the Option Tracker
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="option-tracker-component-functions.html#function_option-tracker-usage-get"><code class="literal">option_tracker_usage_get()</code></a></th>
<td>
      Get usage data for an option registered with the Option Tracker
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="option-tracker-component-functions.html#function_option-tracker-usage-get"><code class="literal">option_tracker_usage_set()</code></a></th>
<td>
      Set usage data for an option registered with the Option Tracker
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="firewall-component.html#function_read-firewall-group-allowlist"><code class="literal">read_firewall_group_allowlist()</code></a></th>
<td>
      Update firewall group profile recorded-statement cache
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="firewall-component.html#function_read-firewall-groups"><code class="literal">read_firewall_groups()</code></a></th>
<td>
      Update firewall group profile cache
    </td>
<td></td>
</tr><tr><th scope="row"><code class="literal">read_firewall_users()</code></th>
<td>
      Update firewall account profile cache
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><code class="literal">read_firewall_whitelist()</code></th>
<td>
      Update firewall account profile recorded-statement cache
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><a class="link" href="locking-service.html#function_service-get-read-locks"><code class="literal">service_get_read_locks()</code></a></th>
<td>
      Acquire locking service shared locks
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="locking-service.html#function_service-get-write-locks"><code class="literal">service_get_write_locks()</code></a></th>
<td>
      Acquire locking service exclusive locks
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="locking-service.html#function_service-release-locks"><code class="literal">service_release_locks()</code></a></th>
<td>
      Release locking service locks
    </td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="firewall-component.html#function_set-firewall-group-mode"><code class="literal">set_firewall_group_mode()</code></a></th>
<td>
      Establish firewall group profile operational mode
    </td>
<td></td>
</tr><tr><th scope="row"><code class="literal">set_firewall_mode()</code></th>
<td>
      Establish firewall account profile operational mode
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><code class="literal">version_tokens_delete()</code></th>
<td>
      Delete tokens from version tokens list
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><code class="literal">version_tokens_edit()</code></th>
<td>
      Modify version tokens list
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><code class="literal">version_tokens_lock_exclusive()</code></th>
<td>
      Acquire exclusive locks on version tokens
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><code class="literal">version_tokens_lock_shared()</code></th>
<td>
      Acquire shared locks on version tokens
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><code class="literal">version_tokens_set()</code></th>
<td>
      Set version tokens list
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><code class="literal">version_tokens_show()</code></th>
<td>
      Return version tokens list
    </td>
<td>Yes</td>
</tr><tr><th scope="row"><code class="literal">version_tokens_unlock()</code></th>
<td>
      Release version tokens locks
    </td>
<td>Yes</td>
</tr></tbody></table>